# venmo-cli

./: .gitignore  API.md  CONTRIBUTING.md  Cargo.toml  JSON.md  LICENSE  PLAN.md  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: release.yml  rust-ci.yml
docs/: architecture.md  evidence-gated-follow-ups.md  macos-code-signing.md  public-api.md  retained-test-contracts.md  testing.md
scripts/: cargo-runner-macos.sh
skills/venmo-cli/: SKILL.md
skills/venmo-cli/references/: authentication.md  cli-reference.md
skills/venmo-cli/references/json/: activity.md  auth.md  balance.md  friends.md  pay.md  requests.md  transfers.md  users.md
src/: error.rs  lib.rs  main.rs  model.rs
src/adapters/: mod.rs
src/adapters/cli/: command.rs  completions.rs  error.rs  failure.rs  logging.rs  mod.rs  prompt.rs
src/adapters/cli/args/: auth.rs  completions.rs  friends.rs  mod.rs  parsers.rs  reads.rs  requests.rs  transfers.rs  writes.rs
src/adapters/cli/dispatch/: auth.rs  composition.rs  doctor.rs  doctor_tests.rs  mod.rs  reads.rs  reads_tests.rs  tests.rs  writes.rs  writes_accept_tests.rs  writes_activity_tests.rs  writes_cancel_tests.rs  writes_decline_tests.rs  writes_pay_tests.rs  writes_transfer_friend_tests.rs
src/adapters/cli/output/: activity.rs  auth.rs  doctor.rs  error.rs  json.rs  mod.rs  people.rs  requests.rs  session.rs  shared.rs  timestamp.rs  transfers.rs  wallet.rs  writes.rs
src/adapters/cli/response/: activity.rs  auth.rs  mod.rs  people.rs  requests.rs  shared.rs  transfers.rs  wallet.rs  writes.rs
src/adapters/cli/snapshots/: venmo_cli__adapters__cli__completions__tests__bash.snap  venmo_cli__adapters__cli__completions__tests__fish.snap  venmo_cli__adapters__cli__completions__tests__powershell.snap  (+1 more)
src/adapters/credentials/: codec.rs  mod.rs  store.rs  xdg.rs
src/adapters/system/: build_info.rs  client_id.rs  clock.rs  mod.rs
src/adapters/venmo/: mod.rs
src/application/: accept.rs  activity.rs  auth.rs  balance.rs  decline.rs  doctor.rs  financial.rs  friends.rs  funding.rs  mod.rs  pay.rs  payment_methods.rs  ports.rs  read.rs  recipients.rs  request_create.rs  request_mutation.rs  requests.rs  users.rs
src/cli/: args.rs  completions.rs  dispatch.rs  mod.rs  output.rs  prompt.rs
src/domain/: account.rs  activity.rs  balance.rs  credential.rs  financial.rs  identifiers.rs  login.rs  mod.rs  money.rs  note.rs  pagination.rs  payment_method.rs  pending_request.rs  recipient.rs  user.rs
src/features/: mod.rs  p2p_step_up.rs
src/features/activity/: comment_list.rs  comment_remove.rs  continuation.rs  error.rs  info.rs  list.rs  mod.rs  model.rs  ports.rs  reactions.rs  show.rs  social.rs  tests.rs
src/features/auth/: login.rs  logout.rs  mod.rs  model.rs  persistence.rs  ports.rs  reauthenticate.rs  status.rs
src/features/doctor/: diagnose.rs  mod.rs  model.rs  ports.rs  tests.rs
src/features/payments/: confirmation.rs  confirmation_tests.rs  funding.rs  funding_tests.rs  mod.rs  model.rs  pay.rs  ports.rs  preflight.rs  tests.rs  validation.rs  validation_tests.rs
src/features/people/: friends.rs  friends_subject_tests.rs  friendship.rs  info.rs  info_tests.rs  lookup.rs  mod.rs  ports.rs  recipient.rs  recipients.rs  recipients_tests.rs  user.rs  users.rs  users_tests.rs
src/features/requests/: accept.rs  cancel.rs  continuation.rs  create.rs  create_tests.rs  decline.rs  decline_tests.rs  info.rs  info_tests.rs  list.rs  list_tests.rs  mod.rs  model.rs  plans.rs  ports.rs  preflight.rs  tests.rs  validation.rs  validation_tests.rs
src/features/transfers/: in_transfer.rs  mod.rs  model.rs  options.rs  out.rs  ports.rs  selection.rs  tests.rs
src/features/wallet/: balance.rs  balance_model.rs  balance_tests.rs  mod.rs  payment_method.rs  payment_methods.rs  payment_methods_tests.rs  ports.rs
src/infrastructure/: logging.rs  mod.rs  system.rs
src/infrastructure/credentials/: codec.rs  mod.rs  native.rs
src/infrastructure/venmo_api/: client.rs  dto.rs  mod.rs  transport.rs
src/shared/: client.rs  continuation.rs  credential.rs  credentials.rs  decimal.rs  failure.rs  first_seen.rs  mod.rs  money.rs  note.rs  opaque_id.rs  pagination.rs  test_support.rs  user_id.rs  username.rs  visibility.rs
tests/: cli.rs  domain.rs  errors.rs  process.rs
tests/snapshots/: cli__accept.snap  cli__activity.snap  cli__activity_comments.snap  cli__activity_comments_add.snap  cli__activity_comments_list.snap  cli__activity_comments_remove.snap  cli__activity_info.snap  cli__activity_like.snap  cli__activity_list.snap  cli__activity_reactions.snap  cli__activity_reactions_add.snap  cli__activity_reactions_list.snap  cli__activity_reactions_remove.snap  cli__activity_show.snap  cli__activity_unlike.snap  cli__auth.snap  cli__auth_login.snap  cli__auth_logout.snap  cli__auth_reauthenticate.snap  cli__auth_status.snap  cli__balance.snap  cli__completions.snap  cli__decline.snap  cli__doctor.snap  cli__friends.snap  cli__friends_add.snap  cli__friends_list.snap  cli__friends_remove.snap  cli__pay.snap  cli__pay_methods.snap  cli__pay_options.snap  cli__pay_user.snap  cli__payment_methods.snap  cli__payment_methods_list.snap  cli__request.snap  cli__request_accept.snap  cli__requests.snap  cli__requests_accept.snap  cli__requests_cancel.snap  cli__requests_create.snap  (+13 more)
(+138 files in other folders)
